feat: Simplified placeholders logic